# pyblock

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  NOTES.rst  README.md  setup.py
docs/etc/: autopysrc.py
docs/etc/block/: __init__.py  block.py  data_page.py  dmrg.py  io.py  operator.py  rev.py  symmetry.py
docs/source/: block-block.rst  block-operator.rst  conf.py  index.rst  modules.rst
docs/source/API/: block-data-page.rst  block-dmrg.rst  block-io.rst  block-rev.rst  block-symmetry.rst  block.rst  modules-block.rst  modules-py.rst  pyblock-algorithm.rst  pyblock-hamiltonian.rst  pyblock-legacy.rst  pyblock-numerical.rst  pyblock-qchem.rst  pyblock-symmetry.rst  pyblock-tensor.rst  pyblock.rst
docs/source/DMRG/: correlation.rst  main.rst  spatial.rst  su2.rst  unrestricted.rst
pyblock/: block_dmrg.py  compress.py  davidson.py  dmrg.py  time_evolution.py
pyblock/algorithm/: __init__.py  compress.py  dmrg.py  expectation.py  time_evolution.py
pyblock/hamiltonian/: block.py  qc.py
pyblock/legacy/: block_dmrg.py
pyblock/numerical/: __init__.py  davidson.py  expo.py
pyblock/qchem/: __init__.py  contractor.py  core.py  fcidump.py  mpo.py  mps.py  occupation.py  operator.py  parallelizer.py  simplifier.py  te_contractor.py  thermal.py
pyblock/qchem/ancilla/: __init__.py  mpo.py  mps.py
pyblock/qchem/npdm/: __init__.py  mpo.py
pyblock/symmetry/: basis.py  cg.py  symmetry.py
pyblock/tensor/: hmpo.py  mpo.py  mps.py  operator.py  tensor.py
src/: enumerator.h  global.h  main.C
src/array/: IntegralMatrix.C  IntegralMatrix.h  multiarray.h  newmatutils.h  para_array.h
src/block/: BlockAndDecimate.C  StackBaseOperator.C  StackBaseOperator.h  Stack_op_components.h  Stackspinblock.C  Stackspinblock.h  Stackwavefunction.C  initblocks.C  initblocks.h  operatorfunctions.C  operatorfunctions.h  rotationmat.C  saveBlock.C  set_stackspinblock_components.C  stackguess_wavefunction.h  stackopxop.C  stackopxop.h
src/csf/: couplingCoeffs.h  csf.C
src/dmrg/: dmrg.C  dmrg_wrapper.h  fciqmchelper.C  fciqmchelper.h  onepdm.C  partial_sweep.C  sweep.C  sweep_params.C  sweep_params.h  sweepgenblock.C  wrapper.C
src/io/: fiedler.C  input.C  input.h  readinput.C  timer.C  timer.h
src/mps_nevpt/: mps_nevpt.C
src/newmat10/: CMakeLists.txt
src/numeric/: MatrixBLAS.C  MatrixBLAS.h  linear.C
src/pybind/: block.C  block.cpp  data_page.cpp  dmrg.C  dmrg.cpp  io.C  io.cpp  main.C  main.cpp  matrix.cpp  operator.C  operator.cpp  pickle.cpp  rev.cpp  symmetry.C  symmetry.cpp
src/rev/: data_page.cpp  data_page.hpp  operator_functions.cpp  operator_functions.hpp
src/symmetry/: Symmetry.C
tests/: input.c1-restart.txt  test.py  test2.py  test_mps.py  test_mps_sz.py
tests/ancilla/: HUBBARD-L8-U2-NNN.FCIDUMP  HUBBARD-L8-U2.FCIDUMP  ancilla.py  cps-ancilla.py
tests/block_python_api/: N2.STO3G.FCIDUMP.C1  input.c1.txt  input.txt  test_block_mps.py  test_mps.py  test_mps_sz.py
tests/c2-block/: block.out  dmrg-no-save.py  dmrg-simpl-tto-mpi.py  dmrg-simpl-tto.py  dmrg-simpl.py  dmrg.out  dmrg.py  dmrg_block.py  input.txt
tests/compress/: compress.py
tests/hubbard-1d/: HUBBARD-L16.FCIDUMP  dmrg.py  input.txt
tests/n2-sto3g/: dmrg-occ.py  dmrg-simpl.py  dmrg.py  dmrg_block.py  input.txt
tests/n2-sto3g-1e/: N2-1E.FCIDUMP  dmrg.py  dmrg_block.py  input.txt
unit_test/: test_ancilla.py  test_block.py  test_davidson.py  test_dmrg.py  test_dmrg_mid.py  test_dmrg_omp.py  test_dmrg_one_site.py  test_expect.py  test_expo.py  test_fcidump.py  test_legacy.py  test_mps.py  test_npdm.py  test_operator.py  test_symmetry.py
unit_test/data/: HUBBARD-L8-U2-NNN.FCIDUMP  HUBBARD-L8-U2.FCIDUMP  N2.STO3G-ALT.FCIDUMP  N2.STO3G-OCC.FCIDUMP  N2.STO3G-OCC.OCC  N2.STO3G-UHF.FCIDUMP
